# mimir

./: .gitignore  CLAUDE.md  Personalized_Diet_Recommendations.csv  README.md  environment.yml  patient_eval.csv
figures/: contribution2.drawio  jhmi_part_a_gat_v2.drawio  jhmi_subfig.drawio  jhmi_v4.drawio  jhmi_v4_partA_gat_zoom.drawio  jhmi_v4_partA_new.drawio  jhmi_v4_partA_v2.drawio  jhmi_v4_partA_v3.drawio  jhmi_v5.drawio  (+2 more)
nutri-atlas/robot_control/robot_side/zmq_bridge_real/realsense_zmq/: CMakeLists.txt  package.xml
nutri-atlas/robot_control/robot_side/zmq_bridge_real/realsense_zmq/include/realsense_zmq/: ros_realsense_subscriber.hpp  zmq.ports.hpp  zmq_color_image_publisher.hpp
nutri-atlas/robot_control/robot_side/zmq_bridge_real/realsense_zmq/launch/: bringup_with_zmq.launch.py
nutri-atlas/robot_control/robot_side/zmq_bridge_real/realsense_zmq/src/: realsense_zmq_node.cpp
nutri-atlas/robot_control/robot_side/zmq_bridge_real/realsense_zmq/src/lib/: ros_realsense_subscriber.cpp  zmq_color_image_publisher.cpp
nutri_graph/: .gitignore  README.md  UPGRADE_PLAN.md  pyproject.toml  requirements.txt
nutri_graph/nutri_graph/: config.py
nutri_graph/nutri_graph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nutri_graph/nutri_graph/graph/: dataset.py  negative_sampling.py
nutri_graph/nutri_graph/kb/: builder.py  recipe_builder.py  search.py
nutri_graph/nutri_graph/models/: gat_model.py
nutri_graph/nutri_graph/retrevial/: index.py
nutri_graph/nutri_graph/training/: contrastive.py  trainer.py
nutri_graph/nutri_graph/visualization/: clustering.py  colors.py  macro_labels.py  plots.py  snapshots.py  training_plots.py  umap.py
nutri_graph/outputs_0/embeddings/: cluster_labels.pt
nutri_graph/outputs_0/snapshots/: food_emb_epoch_1.npy  food_emb_epoch_30.npy  food_emb_epoch_60.npy  food_emb_epoch_90.npy  vis_idx.npy
nutri_graph/outputs_0/training/: history.json
nutri_graph/scripts/: build_kb.py  build_nutrient_emb_index.py  build_recipe_kb.py  demo_retrival.py  download_data.py  eval_food_subs.py  export_kb.py  generate_umap.py  seed_search.py  split_subs.py  train_GAT.py  visualize_umap_progression.py
nutri_rag/: PROBLEMS.md  RAG_PLAN.md  README.md  SYSTEM_OVERVIEW.md  problems.txt  pyproject.toml  user_preferences.duckdb.wal
nutri_rag/data/: detected_objects.json  meal_categories.json
nutri_rag/debug_scripts/: analyze_failures.py  analyze_per_item.py  show_failure_samples.py  show_samples.py
nutri_rag/debug_scripts/outputs/: failure_samples.txt  failures_Analysis.md  sample1.txt
nutri_rag/nutri_rag/: config.py  embedding.py  llm.py  parse.py  search.py  search_bm25.py
nutri_rag/nutri_rag/assistant/: availability.py  food_recommender.py  gap_analyzer.py  meal_recommender.py  pipeline.py  preference_db.py  prompt.py  target_encoder.py
nutri_rag/nutri_rag/bench/: nutrient_prompts.py  prompt.py  retriever.py  retriever_bm25.py  task_utils.py
nutri_rag/nutri_rag/pfoodreq/: __init__.py  evaluator.py  prompt.py  query_parser.py  retriever.py
nutri_rag/scripts/: build_embeddings.py  build_recipe_embeddings.py  compare_results.py  demo_assistant.py  demo_bench.py  eval_patient_recommendations.py  plot_similarity_analysis.py  results_figure_drawing.py  results_figure_drawing_v1.py  results_figure_drawing_v2 copy.py  results_figure_drawing_v2.py  results_figure_drawing_v3.py  run_all_bench.py  run_baseline.py  run_bench.py  run_bench.sh  run_model_sweep.py  run_pfoodreq_bench.py  start_server.sh
nutri_rag/tasks/_baseline_temp/: _default_template_yaml  baseline.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag/: rag.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag_bm25/: _rag_bm25_default_template_yaml  rag_bm25.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag_gat/: _rag_gat_default_template_yaml  rag_gat.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag_gat_multi/: _rag_gat_multi_default_template_yaml  rag_gat_multi.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag_gat_pure/: _rag_gat_pure_default_template_yaml  rag_gat_pure.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag_hybrid/: rag_hybrid.yaml  utils.py
nutri_rag/tasks/nutribench_v2_rag_v3/: _rag_v3_default_template_yaml  rag_v3.yaml  utils.py
plans/: multi_model.md  (+7 more)
(+60 files in other folders)
