[project]
name = "nutri_rag"
version = "0.1.0"
description = "GAT-Embedding RAG for Nutrition Estimation & Personalized Recommendations"
requires-python = ">=3.9"
dependencies = [
    "duckdb",
    "numpy",
    "requests",
    "torch",
    "transformers>=4.51.0",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nutri_rag*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
